--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,6 +12,26 @@
 </head>
 <body>
     <h1>YOUR GAME HERE!</h1>
-    
+  <input id="pOneInput" placeholder="Player 1" type="text">
+  <input id="pTwoInput" placeholder="Player 2" type="text">
+  <input id="pThreeInput" placeholder="Player 3" type="text">
+  <button id="submitButton">Submit</button>
+<h3>History</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Round</th>
+        <th>Player One</th>
+        <th>Player Two</th>
+        <th>Player Three</th>
+      </tr>
+    </thead>
+    <tbody id="history">
+
+    </tbody>
+    <tfoot>
+    </tfoot>
+  </table>
+
 </body>
 </html>
